--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "deploy": "npm run build; push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "node ./node_modules/vue-gh-pages/index.js",
+    "homepage": "https://github.com/hhochart29/dataviz"
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-gh-pages": "^1.16.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -50,7 +52,6 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
-    "push-dir": "^0.4.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.0.1",
     "semver": "^5.3.0",
