--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "google-spreadsheet-to-json": "^1.0.0",
+    "lodash": "^4.17.10",
     "vue": "^2.5.2",
     "vue-gh-pages": "^1.16.0",
     "vue-router": "^3.0.1"
